2002-01-15  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs (mergeMaps): now, the read map overrides any
	entires for shared keys in the map that is already in the monad;
	this is so that, if multiple import hooks add entries for shared
	keys, the textually latest prevails; any local entries are entered
	after all import hooks anyway

	* toplevel/Version.hs (versnum): 0.10.6

2002-01-10  Jens Petersen  <juhp@01.246.ne.jp>

	* c/CParser.hs (parseC): corrected "contained contained" in
	proceeding comments.

	* ../doc/c2hs/c2hs.sgml (Set Hooks): correct #get to #set

	* ../doc/c2hs/Makefile (TOP): "../../.." to "../.."

2002-01-10  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* toplevel/Version.hs (versnum): 0.10.5

2001-12-20  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs (expandHook): fixed a sizeof bug pointed out by Jens
	Petersen <petersen@redhat.com>

	* toplevel/Version.hs (versnum): 0.10.4

2001-12-11  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* toplevel/c2hs_config.c: now conforms to ISO C

	* toplevel/Version.hs (versnum): 0.10.3

2001-11-14  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs (setGet): debugged

2001-11-13  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs (setGet): reading and writing of bitfields
	(alignOffset): now handles alignment of bit fields
	(extractCompType): debugging

2001-11-12  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* gen/GenBind.hs (specType): added bitfield handling
	(BitSize): introduced size specs for partially filled storage units

	* toplevel/C2HSConfig.hs.in (bitfieldDirection): added
	(bitfieldPadding): added
	(bitfieldIntSigned): added

	* toplevel/c2hs_config.c: runtime configuration query functions

	* gen/CInfo.hs (CPrimType): extended by variants for bitfields
	(size): now a function instead of an array
	(alignment): now a function instead of an array

	* gen/GenBind.hs (showExtType): simplified `showExtType' again;