@@ -4,11 +4,11 @@ where
 -- version number is major.minor.patchlvl; don't change the format of the
 -- `versnum' line as it is `grep'ed for by a Makefile
 --
-idstr      = "$Id: Version.hs,v 1.55 2002/01/15 07:56:39 chak Exp $"
+idstr      = "$Id: Version.hs,v 1.56 2002/02/05 12:38:27 chak Exp $"
 name       = "C->Haskell Compiler"
-versnum    = "0.10.6"
+versnum    = "0.10.7"
 versnick   = "\"Altocumulus Stratiformis Perlucidus Undulatus\""
-date	   = "15 Jan 2002"
+date	   = "5 Feb 2002"
 version    = name ++ ", version " ++ versnum ++ " " ++ versnick ++ ", " ++ date
 copyright  = "Copyright (c) [1999..2002] Manuel M. T. Chakravarty"
 disclaimer = "This software is distributed under the \
