@@ -1,3 +1,9 @@
+2002-02-05  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>
+
+	* aclocal.m4 (CTK_GHC_VERSION): no \+ in sed on Solaris
+
+	* toplevel/Version.hs (versnum): 0.10.7
+
 2002-01-15  Manuel M T Chakravarty  <chak@cse.unsw.edu.au>
 
 	* gen/GenBind.hs (mergeMaps): now, the read map overrides any
